fixed some of the css for the schedule on smaller screens

--- a/website/scss/day-main.scss
+++ b/website/scss/day-main.scss
@@ -307,7 +307,7 @@ header {
     font-weight: 100;
     text-align:  left;
     padding-top: 5vh;
-    line-height: 200%;
+    line-height: 1.85em;
     color: #424242;
 
     span {
